--- a/gas-plasma.html
+++ b/gas-plasma.html
@@ -54,7 +54,7 @@
                                 </li>
 
                                 <li>
-                                    <a href="#">Tillägg</a>
+                                    <a href="tillagg.html">Tillägg</a>
                                 </li>
                             </ul>
                         </div>
@@ -248,7 +248,7 @@
             </div>
 
             <h2 id="galleri-plasma">Galleri</h2>
-            
+            <hr>
             <!-- GASSKÄRNING -->
             <div id="process-gas">
             <div class="hS">Skärmetod</div>
@@ -266,6 +266,12 @@
             </ul>
             <ul>
             <p>Kontakta oss om du vill veta mer om gasskärning och dess fördelar.</p>
+
+            <speckle class="rellax first" data-rellax-speed="3" data-rellax-xs-speed="0" data-rellax-mobile-speed="0" data-rellax-tablet-speed="0">
+            </speckle>
+            
+            <speckle class="rellax fourth" data-rellax-speed="5" data-rellax-xs-speed="0" data-rellax-mobile-speed="0" data-rellax-tablet-speed="0">
+            </speckle>
 
             <h2 id="material-gas">Material</h2>
             <p>Gasskärning är ämnat för skärande bearbetning i olegerade och låglegerade stålsorter.</p>
@@ -351,7 +357,7 @@
                     <a href="#">Gas & Plasmaskärning</a>
                 </li>
                 <li>
-                    <a href="#">Bockning</a>
+                    <a href="tillagg.html">Tillägg</a>
                 </li>
             </ul>
             </div>
@@ -382,6 +388,8 @@
 </screenwrapper>
     <script src="js/data-scroll.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/rellax.min.js"></script>
+    <script src="js/initiate-sp.js"></script>
     <script src="js/ScrollMagic.min.local.js"></script>
     <script src="js/init-scrollmagic.js" async="true"></script>
 </body>
