--- a/laser.html
+++ b/laser.html
@@ -54,7 +54,7 @@
                                 </li>
 
                                 <li>
-                                    <a href="#">Tillägg</a>
+                                    <a href="tillagg.html">Tillägg</a>
                                 </li>
                             </ul>
                         </div>
@@ -171,6 +171,13 @@
             <p>I våra laserskärmaskiner kan vi skära upp till 20mm i godstjocklek i konstruktionsstål och upp till 10mm i rostfria stålsorter och aluminium. Tveka inte kontakta oss så hjälper vi dig välja skärmetod för bästa resultat.</p>
 
             <p>Vi kan skära i material så som:</p>
+
+            <speckle class="rellax third" data-rellax-speed="2" data-rellax-xs-speed="0" data-rellax-mobile-speed="0" data-rellax-tablet-speed="0">
+            </speckle>
+
+            <speckle class="rellax sixth" data-rellax-speed="3" data-rellax-xs-speed="0" data-rellax-mobile-speed="0" data-rellax-tablet-speed="0">
+            </speckle>
+
             <div class="material-grid">
                 <div class="material-box">
                     <p>Stål</p>
@@ -280,7 +287,7 @@
                     <a href="gas-plasma.html">Gas & Plasmaskärning</a>
                 </li>
                 <li>
-                    <a href="#">Bockning</a>
+                    <a href="tillagg.html">Tillägg</a>
                 </li>
             </ul>
             </div>
@@ -311,6 +318,8 @@
 </screenwrapper>
     <script src="js/data-scroll.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/rellax.min.js"></script>
+    <script src="js/initiate-sp.js"></script>
     <script src="js/ScrollMagic.min.local.js"></script>
     <script src="js/init-scrollmagic.js" async="true"></script>
 </body>
