--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
     </style>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link rel="stylesheet" type="text/css" href="css/card-anims.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css/card-anims.css"> -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -55,7 +55,7 @@
                                 </li>
 
                                 <li>
-                                    <a href="#">Tillägg</a>
+                                    <a href="tillagg.html">Tillägg</a>
                                 </li>
                             </ul>
                         </div>
