--- a/tillagg.html
+++ b/tillagg.html
@@ -153,7 +153,7 @@
         <div class="process-container" id="process-rullning">
             <div class="hS">Bearbetning</div>
                 <h1>Rullning</h1>
-                <p>Under rullningsprocessen så klämms materialet mellan två huvudrullar som håller i materialet som senare blir formade utav yttligare två rullar som trycks emot materialet. Det är de två formrullarna som bestämmer radien på det rullbockade materialet.</p>
+                <p>Under rullningsprocessen så klämms materialet mellan två huvudrullar och blir formade utav två formrullar som pressas mot arbetsstycket. Det är kraften och avståndet mellan formrulle och huvudrulle som bestämmer radien på det rullbockade materialet.</p>
                 <p>Med våran rullbockmaskin kan vi rulla plåt upp till 10mm i godstjocklek och med en maxradie upp till 1500mm och en minimumradie på 300mm > 2mm godstjocklek.</p>
                 <p>Rullning kan göras i de flesta metalliska material.</p>
 
@@ -173,7 +173,7 @@
                 <h1>Bockning</h1>
                 <p>Med en kraft upp till 220 ton, kläms materialet mellan ett pressverktyg och en dyna för att bocka kanter till förprogrammerade grader.</p>
                 <p>Med våran kantpress, som är den senaste investeringen i våran arsenal av maskiner kan vi bocka komplexa geometrier så som enkla, i tjockt och tunt material.</p>
-                <p>Vi kan bocka de flesta mjuka metaller upp till 10mm* i olegerade samt legerade stålsorter.</p>
+                <p>Vi kan bocka de flesta mjuka metaller upp till 10mm* i godstjocklek i olegerade samt legerade stålsorter.</p>
 
                 <p>Kontakta oss om du vill veta mer om kantpressning och vad vi kan göra för dig. Vi hanterar 2D / 3D-filer men kan även anpassa oss runt skisser och ritningar.</p>
                 <sub>* = Möjligheten att bocka i grövre material minskar ju längre materialet är.</sub>
