--- a/tillagg.html
+++ b/tillagg.html
@@ -38,7 +38,7 @@
                     </li>
 
                     <li>
-                        <a href="#">Bearbetning</a>
+                        <a href="#" id="de">Bearbetning</a>
                         <div class="dropdown">
                             <ul>
                                 <li>
@@ -56,12 +56,16 @@
                                 <li>
                                     <a href="#">Tillägg</a>
                                 </li>
+
+                                <li>
+                                    <button class="dropdown-btn">Tillbaka</button>
+                                </li>
                             </ul>
                         </div>
                     </li>
 
                     <li>
-                        <a href="#">Maskinpark</a>
+                        <a href="#" id="de">Maskinpark</a>
                         <div class="dropdown">
                             <ul>
                                 <li>
@@ -91,12 +95,16 @@
                                 <li>
                                     <a href="#">AMADA HFE 3i 2204</a>
                                 </li>
+
+                                <li>
+                                    <button class="dropdown-btn">Tillbaka</button>
+                                </li>
                             </ul>
                         </div>
                     </li>
 
                     <li>
-                        <a href="#">Företaget</a>
+                        <a href="#" id="de">Företaget</a>
                         <div class="dropdown">
                             <ul>
                                 <li>
@@ -113,6 +121,10 @@
 
                                 <li>
                                     <a href="#">Personal</a>
+                                </li>
+
+                                <li>
+                                    <button class="dropdown-btn">Tillbaka</button>
                                 </li>
                             </ul>
                         </div>
