--- a/vatten.html
+++ b/vatten.html
@@ -38,7 +38,7 @@
                     </li>
 
                     <li>
-                        <a href="#">Bearbetning</a>
+                        <a href="#" id="de">Bearbetning</a>
                         <div class="dropdown">
                             <ul>
                                 <li>
@@ -56,12 +56,16 @@
                                 <li>
                                     <a href="tillagg.html">Tillägg</a>
                                 </li>
+
+                                <li>
+                                    <button class="dropdown-btn">Tillbaka</button>
+                                </li>
                             </ul>
                         </div>
                     </li>
 
                     <li>
-                        <a href="#">Maskinpark</a>
+                        <a href="#" id="de">Maskinpark</a>
                         <div class="dropdown">
                             <ul>
                                 <li>
@@ -91,12 +95,16 @@
                                 <li>
                                     <a href="#">AMADA HFE 3i 2204</a>
                                 </li>
+
+                                <li>
+                                    <button class="dropdown-btn">Tillbaka</button>
+                                </li>
                             </ul>
                         </div>
                     </li>
 
                     <li>
-                        <a href="#">Företaget</a>
+                        <a href="#" id="de">Företaget</a>
                         <div class="dropdown">
                             <ul>
                                 <li>
@@ -114,6 +122,10 @@
                                 <li>
                                     <a href="#">Personal</a>
                                 </li>
+
+                                <li>
+                                    <button class="dropdown-btn">Tillbaka</button>
+                                </li>
                             </ul>
                         </div>
                     </li>
@@ -126,7 +138,6 @@
         </div>
     </div>
 
-        <!-- OBS! water-section is creating jitteriness, CBR (Clean before release)-->
     <section class="process-heading water-section"></section>
 
     <section class="process-section" id="vatten">
