--- a/vatten.html
+++ b/vatten.html
@@ -20,7 +20,7 @@
         <div class="navbar-container">
             <div class="navbar-items">
                 <!-- <img src="ewj_logo_animated.svg" alt="Ekshärads Water Jet AB"> -->
-                <object type="image/svg+xml" data="ewj_logo_animated.svg" class="navbar-svg" alt="Ekshärads Water Jet AB" href="#" aria-label="Ekshärads Water Jet AB"></object>
+                <object type="image/svg+xml" data="ewj_logo.svg" class="navbar-svg" alt="Ekshärads Water Jet AB" href="index.html" aria-label="Ekshärads Water Jet AB"></object>
             </div>
 
             <div class="navbar-items">
