--- a/vatten.html
+++ b/vatten.html
@@ -7,9 +7,16 @@
     <!-- <link rel="stylesheet" type="text/css" href="css/styles.min.css"> -->
     <link rel="preload" href="css/styles.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="css/styles.min.css"></noscript>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
-    <link rel="stylesheet" href="./photoswipe/photoswipe.css">
-    <link rel="stylesheet" href="./photoswipe/photoswipe-dynamic-caption-plugin.css">
+
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"></noscript>
+
+    <link rel="preload" href="./photoswipe/photoswipe.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="./photoswipe/photoswipe.css"></noscript>
+
+    <link rel="preload" href="./photoswipe/photoswipe-dynamic-caption-plugin.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="./photoswipe/photoswipe-dynamic-caption-plugin.css"></noscript>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
