Updated - added maskinpark

--- a/index.html
+++ b/index.html
@@ -5,17 +5,11 @@
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
     </style>
 
-    <link rel="preload" href="css/styles.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="css/styles.min.css"></noscript>
+    <link rel="preload" href="css/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="css/styles.css"></noscript>
 
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"></noscript>
-
-    <!-- <link rel="preload" href="./photoswipe/photoswipe.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="./photoswipe/photoswipe.css"></noscript>
-
-    <link rel="preload" href="./photoswipe/photoswipe-dynamic-caption-plugin.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="./photoswipe/photoswipe-dynamic-caption-plugin.css"></noscript> -->
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -77,31 +71,35 @@
                         <div class="dropdown">
                             <ul>
                                 <li>
-                                    <a href="#">Kimtech XY Large</a>
+                                    <a href="maskinpark.html#kimtech-xy-large">Kimtech XY Large</a>
                                 </li>
 
                                 <li>
-                                    <a href="#">Kimtech XY Medium</a>
+                                    <a href="maskinpark.html#kimtech-xy-medium">Kimtech XY Medium</a>
                                 </li>
 
                                 <li>
-                                    <a href="#">Kimtech XY Small</a>
+                                    <a href="maskinpark.html#kimtech-xy-small">Kimtech XY Small</a>
                                 </li>
 
                                 <li>
-                                    <a href="#">Prima Platino CP400</a>
+                                    <a href="maskinpark.html#prima-platino-cp400">Prima Platino CP400</a>
                                 </li>
 
                                 <li>
-                                    <a href="#">AMADA ENSIS 3015 AJ</a>
+                                    <a href="maskinpark.html#amada-ensis-3015-aj">AMADA ENSIS 3015 AJ</a>
                                 </li>
 
                                 <li>
-                                    <a href="#">Baykal HYPERTHERM 260XD</a>
+                                    <a href="maskinpark.html#baykal-hypertherm-260xd">Baykal HYPERTHERM 260XD</a>
                                 </li>
 
                                 <li>
-                                    <a href="#">AMADA HFE 3i 2204</a>
+                                    <a href="maskinpark.html#amada-hfe-3i-2204">AMADA HFE 3i 2204</a>
+                                </li>
+
+                                <li>
+                                    <a href="maskinpark.html#sahinler-4r-hs-30-260">Sahinler 4R HS 30-260</a>
                                 </li>
                             </ul>
                             <button class="dropdown-btn">Tillbaka</button>
@@ -460,7 +458,7 @@
                     <a href="gas-plasma.html">Gas & Plasmaskärning</a>
                 </li>
                 <li>
-                    <a href="#">Tillägg</a>
+                    <a href="tillagg.html">Tillägg</a>
                 </li>
             </ul>
             </div>
